Fixed mobile navigation and media queried body overflow behavior

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -21,7 +21,9 @@ body {
 }
 
 @media (min-width: 1024px) {
-  overflow: scroll;
+  body {
+    overflow: scroll;
+  }
 }
 
 ::-webkit-scrollbar {
